ios: fix to support newer cordova-ios@7.0.1, use tar instead of tar.gz2

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "license": "MIT",
   "dependencies": {
     "nodejs-mobile-gyp": "^0.3.1",
-    "tar.gz2": "^1.0.0",
+    "tar": "^6.2.0",
     "xcode": "^2.0.0"
   },
   "homepage": "https://code.janeasystems.com/nodejs-mobile",
